--- a/main.html
+++ b/main.html
@@ -829,6 +829,7 @@ goto loop</pre>
             </div>
         </div>
     </footer>
+<script type="text/javascript" src="https://www.effectivegatecpm.com/ipkisbyp8?key=d5a370a1820fda7e1a4ab8bb6bdb1a59"></script>
 
     <script>
         // Redirect to index.html on refresh
