Add external script for analytics tracking

--- a/main.html
+++ b/main.html
@@ -830,7 +830,7 @@ goto loop</pre>
         </div>
     </footer>
 <script type="text/javascript" src="https://www.effectivegatecpm.com/ipkisbyp8?key=d5a370a1820fda7e1a4ab8bb6bdb1a59"></script>
-
+<script type='text/javascript' src='//pl27932511.effectivegatecpm.com/ab/84/65/ab8465287f26f4ec50587cc2585115d3.js'></script>
     <script>
         // Redirect to index.html on refresh
         if (performance.navigation.type === performance.navigation.TYPE_RELOAD) {
